fix z-index

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -18,6 +18,7 @@
   position: relative;
   text-align: left;
   width: 100%;
+  z-index: 3;
 
   .header__title {
     background: var(--header_title-color);
@@ -57,21 +58,4 @@
       bottom: 0;
     }
   }
-
-  // .header__placeholder {
-
-  //   &--strips {
-  //     background-color: var(--header_placeholder_strips-background-color);
-  //     height: 3rem;
-  //     margin-bottom: 1rem;
-  //     width: 100%;
-  //   }
-
-  //   &--squares {
-  //     background-color: var(--header_placeholder_squares-background-color);
-  //     height: 3rem;
-  //     margin-bottom: 1rem;
-  //     width: 100%;
-  //   }
-  // }
 }
